test/unittest/error/tst.DTRACEFLT_UNKNOWN.r
The arguments are 2 2 4 6 64
The value of arg4 = 0

-- @@stderr --
dtrace: error on enabled probe ID 2 (ID 1: dtrace:::BEGIN): invalid kernel access in action #2 at DIF offset 4
